<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navi_lesson"
        android:title="@string/navi_lesson"
        android:icon="@drawable/ic_lesson"/>

    <!--<item-->
        <!--android:id="@+id/navi_subject"-->
        <!--android:title="@string/navi_subject"-->
        <!--android:icon="@drawable/ic_category"/>-->

    <item
        android:id="@+id/navi_favorite"
        android:title="@string/navi_favorite"
        android:icon="@drawable/ic_favorite"/>

    <!--video-->
    <item
        android:id="@+id/navi_video"
        android:title="@string/navi_learn_by_video"
        android:icon="@drawable/ic_video"/>

    <!--game-->
    <item
        android:id="@+id/navi_play_game"
        android:title="@string/navi_play_game"
        android:icon="@drawable/ic_playgame"/>

    <item
        android:id="@+id/navi_profile"
        android:title="@string/navi_profile"
        android:icon="@drawable/ic_profile"/>

</menu>